@@ -4,6 +4,7 @@ Changelog
 2.13.8 (unreleased)
 -------------------
 
+- Fixed the BooleanIndex to not index objects without the cataloged attribute.
 
 2.13.7 (2011-02-15)
 -------------------
